--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-browser-dynamic": "~11.2.12",
     "@angular/router": "~11.2.12",
     "engines": {
-      "node": "14.16.1",
+      "node": "14.x",
       "npm": "6.14.12"
     },
     "express": "^4.17.1",
