--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "heroku-postbuild": "ng build --prod"
-  },
+  }, 
+  "node": "14.x",
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.12",
