--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.12",
-    "@angular/cli": "1.4.9",
+    "@angular/cli": "^11.2.11",
     "@angular/common": "~11.2.12",
     "@angular/compiler": "~11.2.12",
     "@angular/compiler-cli": "^4.4.6",
@@ -30,7 +30,7 @@
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "typescript": "~2.4",
+    "typescript": "~2.3",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
